--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,15 +3,19 @@
 @tailwind utilities;
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --background: #0a0908;
+  --foreground: #fffbfc;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+    --background: #0a0908;
+    --foreground: #fffbfc;
   }
+}
+
+font {
+  color: #f2f4f3
 }
 
 body {
