--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,13 +4,13 @@
 
 :root {
   --background: #0a0908;
-  --foreground: #fffbfc;
+  --foreground: #f2f4f3;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0908;
-    --foreground: #fffbfc;
+    --foreground: #f2f4f3;
   }
 }
 
